--- a/shims/emr700/driver/pom.xml
+++ b/shims/emr700/driver/pom.xml
@@ -27,6 +27,7 @@
     <jython.version>2.5.3</jython.version>
     <automaton.version>1.11-8</automaton.version>
     <netty.version>4.1.108.Final</netty.version>
+    <jetty-runner.version>9.3.20.v20170531</jetty-runner.version>
   </properties>
   <dependencies>
     <dependency>
@@ -562,7 +563,7 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-runner</artifactId>
-      <version>${jetty.version}</version>
+      <version>${jetty-runner.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
