--- a/shims/pom.xml
+++ b/shims/pom.xml
@@ -5,12 +5,12 @@
 <parent>
   <groupId>org.pentaho</groupId>
   <artifactId>pentaho-hadoop-shims</artifactId>
-  <version>10.2.0.0-SNAPSHOT</version>
+  <version>10.2.0.1-254</version>
 </parent>
 
 <groupId>org.pentaho.hadoop.shims</groupId>
 <artifactId>pentaho-hadoop-shims-list</artifactId>
-<version>10.2.0.0-SNAPSHOT</version>
+<version>10.2.0.1-254</version>
 <packaging>pom</packaging>
 
 <properties>
