--- a/shims/pom.xml
+++ b/shims/pom.xml
@@ -10,7 +10,7 @@
 
 <groupId>org.pentaho.hadoop.shims</groupId>
 <artifactId>pentaho-hadoop-shims-list</artifactId>
-<version>10.2.0.0-SNAPSHOT</version>
+<version>10.2.0.1-255</version>
 <packaging>pom</packaging>
 
 <properties>
