--- a/shims/hdp26/kar/pom.xml
+++ b/shims/hdp26/kar/pom.xml
@@ -6,11 +6,11 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-hdp26-reactor</artifactId>
-    <version>10.3.0.0-SNAPSHOT</version>
+    <version>10.3.0.0-316</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-hdp26-kar</artifactId>
-  <version>10.3.0.0-SNAPSHOT</version>
+  <version>10.3.0.0-316</version>
   <packaging>kar</packaging>
 
   <dependencies>
