--- a/shims/cdpdc71/driver/pom.xml
+++ b/shims/cdpdc71/driver/pom.xml
@@ -152,7 +152,7 @@
     <dependency>
       <groupId>org.apache.thrift</groupId>
       <artifactId>libthrift</artifactId>
-      <version>0.13.0</version>
+      <version>${org.apache.thrift.version}</version>
     </dependency>
     <dependency>
       <groupId>org.pentaho</groupId>
