--- a/shims/apachevanilla/driver/pom.xml
+++ b/shims/apachevanilla/driver/pom.xml
@@ -46,7 +46,7 @@
       <dependency>
         <groupId>org.apache.thrift</groupId>
         <artifactId>libthrift</artifactId>
-        <version>${org.apache.thrift.version}</version>
+        <version>0.16.0</version>
 	  </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
