--- a/shims/emr700/driver/pom.xml
+++ b/shims/emr700/driver/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.apache.thrift</groupId>
       <artifactId>libthrift</artifactId>
-      <version>${org.apache.thrift.version}</version>
+      <version>0.13.0</version>
     </dependency>
     <dependency>
       <groupId>org.pentaho</groupId>
